# babyname-social

./: .gitignore  Makefile  PROGRESS_SUMMARY.md  README.md  SETUP.md  START_HERE.md  TEST_COVERAGE_SUMMARY.md  claude.md  docker-compose.yml  start-backend.sh  start-frontend.sh
apps/backend/: .coverage  .env.example  DATA_STRATEGY.md  FEATURE_PURPOSE_GUIDE.md  README.md  TEST_COVERAGE_AUDIT.md  pyproject.toml  test_profile_api.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: enrichment.py  name_enhancements.py  names.py  preferences.py  prefix_tree.py  profiles.py
apps/backend/app/auth/: auth.py  user_manager.py
apps/backend/app/dependencies/: auth.py
apps/backend/core/: settings.py
apps/backend/core/models/v1/: name.py  name_enhancement.py  prefix_tree.py  user.py  user_profile.py
apps/backend/data/: README.md  baby_names.json
apps/backend/data/backups/: latest
apps/backend/data/backups/backup_20251222_082848/: MANIFEST.json  famous_namesakes.json
apps/backend/data/sources/ethnicity/: METADATA.yml
apps/backend/data/sources/nicknames/: METADATA.yml
apps/backend/data/sources/popularity/: METADATA.yml
apps/backend/db/: base.py
apps/backend/db/migrations/: 002_add_enrichment_tables.sql  003_add_demographic_and_personalization.sql  004_add_prefix_tree.sql
apps/backend/db/models/: __init__.py  cultural_context.py  famous_reference.py  name.py  name_prefix_tree.py  name_variant.py  popularity_history.py  user.py  user_preference.py
apps/backend/docs/: SCRAPING_STRATEGY.md
apps/backend/scrapers/: __init__.py  behindthename_scraper.py  imdb_scraper.py  ssa_scraper.py  wikipedia_scraper.py
apps/backend/scripts/: add_sample_enrichment_data.py  bootstrap.py  check_tables.py  export_all_data.py  import_all_data.py  import_hadley_names.py  init_db.py  run_migration.py  run_migration_incremental.py  run_migration_simple.py  seed_names.py
apps/backend/tests/integration/: README.md  test_names_endpoints.py
apps/backend/tests/unit/: test_prefix_tree_helpers.py  test_profiles_endpoints.py
apps/frontend/: .coveragerc  .env.mobile  .gitignore  FRONTEND_ARCHITECTURE_ANALYSIS.md  MODEL_USAGE_AUDIT.md  README.md  build.yaml  claude.md  openapi_generator_config.json  pubspec.yaml  test_coverage.sh
apps/frontend/.github/workflows/: test.yml
apps/frontend/android/app/: build.gradle.kts
apps/frontend/docs/: name-tree-design.md  name-tree-implementation-plan.md
apps/frontend/ios/Runner.xcodeproj/: project.pbxproj
apps/frontend/scripts/: regenerate_api.sh
apps/frontend/test/: README.md  widget_test.dart
apps/frontend/test/helpers/: test_helpers.dart
apps/frontend/test/integration/: README.md  names_api_test.dart
apps/frontend/test/unit/providers/: prefix_tree_provider_test.dart  prefix_tree_provider_test.mocks.dart
apps/frontend/test/unit/widgets/: prefix_tree_node_test.dart
docs/: FLUTTER_FASTAPI_GUIDE.md
scripts/: README.md  generate_ports.py
(+1 files in other folders)
