[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "db"]

[project]
name = "babyname-social-backend"
version = "0.1.0"
description = "Backend API for Baby Names Social Network"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    # FastAPI core
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    # Authentication
    "fastapi-users[sqlalchemy]>=14.0.0",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.9.0",
    "email-validator>=2.2.0",
    # Redis & Caching
    "redis>=6.1.0",
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "cinemagoer>=2023.5.1",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "faker>=36.0.0",
    # Linting & formatting
    "ruff>=0.11.0",
    "black>=25.0.0",
    "mypy>=1.10.0",
    "pylint>=3.3.0",
    # Type stubs
    "typing-extensions>=4.9.0",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests that test multiple components together",
    "e2e: End-to-end tests that require running services",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]
